<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.bme.aut.fogadasch.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="hu.bme.aut.fogadasch.activity.ui.gallery.NewBetFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_new_bet" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hu.bme.aut.fogadasch.activity.ui.slideshow.ActiveBetListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_active_bet" />

    <fragment
        android:id="@+id/nav_history"
        android:name="hu.bme.aut.fogadasch.activity.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

</navigation>